src/scss/themes/ng/body.scss
/* ... */
// Drag & Drop

.cui-drag-drop-select-helper {
	position: absolute !important;
	z-index: 3 !important; // above drop helper

	pointer-events: none !important;

	* {
		pointer-events: none !important;
	}

	&.cui-tr {
		padding: 0;
	}
}

.cui-sortable-placeholder {
	opacity: 0;
}


// Droppable

.cui-droppable {
	// marks an active droppable
	// - in list views not neccesary because we have the droppable helper
	// opacity: 0.5;
}

.cui-droppable-drop-helper {
	box-shadow: 0 0 0 2px var(--highlight) inset;
	position: absolute;
	z-index: 2;
	pointer-events: none;
}

.cui-droppable-target-helper {
	//overwrite any other animation, its just temporary
	transition: transform 300ms ease !important;
}

.cui-droppable-target-helper-y--after {
	transform: translateY(-25%);
}

.cui-droppable-target-helper-y--before {
	transform: translateY(25%);
}

.cui-droppable-target-helper-x--after {
	transform: translateX(-25%);
}

.cui-droppable-target-helper-x--before {
	transform: translateX(25%);
}

// Movable
.cui-drag-drop-select-movable {
	cursor: -webkit-grab;
	cursor:         grab;
}

// Resizable
.cui-drag-drop-select-resizable {
	position: relative;
}

.cui-resizable-handle {
	position: absolute;

	&.cui-resizable-handle-se {
		bottom: -8px;
		right: -8px;
		width: 16px;
		height: 16px;
		cursor: nwse-resize;
	}

	&.cui-resizable-handle-nw {
		top: -8px;
		left: -8px;
		width: 16px;
		height: 16px;
		cursor: nwse-resize;
	}

	&.cui-resizable-handle-sw {
		bottom: -8px;
		left: -8px;
		width: 16px;
		height: 16px;
		cursor: nesw-resize;
	}

	&.cui-resizable-handle-ne {
		right: -8px;
		top: -8px;
		width: 16px;
		height: 16px;
		cursor: nesw-resize;
	}

	&.cui-resizable-handle-s {
		left: 8px;
		right: 8px;
		bottom: -8px;
		height: 16px;
		cursor: ns-resize;
	}

	&.cui-resizable-handle-n {
		left: 8px;
		right: 8px;
		top: -8px;
		height: 16px;
		cursor: ns-resize;
	}

	&.cui-resizable-handle-e {
		right: -8px;
		top: 8px;
		bottom: 8px;
		width: 16px;
		cursor: ew-resize;
	}

	&.cui-resizable-handle-w {
		left: -8px;
		top: 8px;
		bottom: 8px;
		width: 16px;
		cursor: ew-resize;
	}
}


// Lasso
.cui-lasso-area {
	position: relative;
}

.cui-lasso {
	position: absolute;
	width: 1px;
	height: 1px;
	left: 0;
	top: 0;
	background-color: var(--highlight);
	display: block;
	pointer-events: none;
	z-index: 1;
	will-change: transform;
	transform-origin: left top;
	opacity: .33;
}

.cui-drag-drop-select-lasso-element-in-lasso {
	opacity: 0.8;
}


// Block

.cui-block {
	flex-shrink: 0;
	padding-top: 1.5*$padding;

	&:first-child {
		padding-top: 0;
	}

	> .cui-block-header {
		.cui-block-title {
			font-weight: 600;
		}
	}

	.cui-block-description {
		color: $secondary-color;
		margin-top: 0;
		margin-bottom: $padding;
	}

	&.appearance-muted {
		.cui-block-header > .cui-block-title {
			color: $muted-color;
		}
	}

	&.cui-block-level-1,
	&.cui-block-level-2 {
		&.appearance-wide {
			background: $toolbar-background;
			padding: 2*$padding;
			position: relative;

			&:after {
				content: "";
				bottom: 0;
				margin: 0 $padding;
				left: 0;
				right: 0;
				height: 1px;
				background: $border;
				position: absolute;
			}

			&:last-child {
				&:after {
					display: none;
				}
			}
		}
	}

	&.cui-block-level-1 {
		> .cui-block-header .cui-block-title {
			font-size: 16px;
		}

		&.appearance-wide {
			padding-top: 13px; // compensate for the headline line-height

			> .cui-block-header {
				padding-bottom: 3px;

				.cui-block-title {
					font-size: 28px;
					line-height: 1.5;
					color: darken($header-color, 6%);
				}
			}

			> .cui-block-content {
				color: $secondary-color;
			}
		}
	}

	&.cui-block-level-2 {
		> .cui-block-header .cui-block-title {
			font-size: 14px;
		}

		&.appearance-wide {
			display: flex;
			flex-wrap: wrap;
			align-items: flex-start;

			// fill in vertical space with gray background
			&:last-child {
				flex-grow: 1;
			}

			> .cui-block-header {
				width: 200px;
				flex-grow: .2;
				padding-right: $padding * 1.5;
				position: sticky;
				top: 0;

				.cui-block-title {
					font-size: 15px;
					color: darken($header-color, 14%);
					padding: $padding 0;
				}
			}

			> .cui-block-content {
				$p: 1.5*$padding;
				background: $foreground;
				border: 1px solid $border;
				border-radius: 5px;
				padding: $p;
				min-width: 500px;
				flex: 1 0 0%;
				box-shadow: 0 1px 2px hsla(205,10%,50%, 0.12);
				
				.cui-data-form--multiple-fields .cui-block-level-3 {
					border-width: 0;
					padding-top: 0;
				}

				.cui-block-level-3 {
					border-top: 1px solid $border;
					border-bottom: 1px solid $border;
					margin: $p -#{$p};
					padding: $p;

					&:first-child {
						border-top-width: 0;
						margin-top: 0;
						padding-top: 0;
					}

					&:last-child {
						border-bottom-width: 0;
						margin-bottom: 0;
						padding-bottom: 0;
					}
				}
			}
		}
	}

	&.cui-block-level-3 {
		padding-bottom: $padding;
		
		&.appearance-wide {
			> .cui-block-header {
				padding-bottom: 1.5*$padding;
			}
		}

		.cui-block-title {
			font-size: 12px;
			text-transform: uppercase;
			letter-spacing: 0.03em;
		}
	}

	&.cui-form-block--has-checkbox {		
		> .cui-block-header .cui-block-title {
			font-size: inherit;
			font-weight: inherit;
		}

		> .cui-block-content {
			margin-left: 24px;
		}

		.cui-block-header {
			padding-bottom: 0;	
		}
	}

	&--padded {
		padding: $padding;

		&:first-child {
			padding-top: $padding;
		}

		&:last-child {
			padding-bottom: $padding;
		}
	}
}

.cui-block-header {
	padding: 0 0 5px;

	&:empty {
		display: none;
	}
}
/* ... */

